--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -525,7 +525,7 @@ main {
 .service-item {
   position: relative;
   background: var(--border-gradient-onyx);
-  padding: 20px;
+  width: 100%;
   border-radius: 14px;
   box-shadow: var(--shadow-2);
   z-index: 1;
