--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -531,6 +531,7 @@ main {
   background: var(--border-gradient-onyx);
   width: 100%; /* Take full width */
   border-radius: 14px;
+  box-sizing: border-box;
   /*padding: 20px; Adjust padding based on the desired internal space */
   box-shadow: var(--shadow-2);
   z-index: 1;
@@ -1403,7 +1404,7 @@ textarea.form-input::-webkit-resizer { display: none; }
     justify-content: flex-start;
     align-items: flex-start;
     gap: 18px;
-    padding: 30px;
+    
   }
 
   .service-icon-box {
