--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -775,6 +775,22 @@ main {
   #RESUME
 \*-----------------------------------*/
 
+.btn {
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.btn-download {
+  margin-top: 20px;
+  display: inline-block;
+}
+
+
 .article-title { margin-bottom: 30px; }
 
 
