--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -777,8 +777,8 @@ main {
 
 .btn {
   padding: 10px 20px;
-  background-color: #4CAF50;
-  color: white;
+  background-color: var(--vegas-gold);
+  color: var(--eerie-black-1);
   text-align: center;
   text-decoration: none;
   border-radius: 5px;
